--- a/react-frontend/src/components/anime/AnimeCard.module.css
+++ b/react-frontend/src/components/anime/AnimeCard.module.css
@@ -57,7 +57,15 @@
 }
 
 .info {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #262829;
+}
+
+.progressBar {
+  height: 3px;
+  border-radius: 3px;
+  width: 100%; /* Take full width of the overlay */
+  background-color: var(--dark-border);
 }
 
 .title {
@@ -65,12 +73,31 @@
   white-space: nowrap; /* Truncate to single line */
   overflow: hidden;
   text-overflow: ellipsis;
+  transition: color 0.3s ease; /* Smooth transition for color change */
+}
+
+.title:hover {
+  color: var(--accent); /* Change color to accent on hover */
+}
+
+.progressOverlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent dark shadow */
+  padding: 0.1rem;
+  box-sizing: border-box;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .progressBar {
   height: 5px;
   border-radius: 5px;
-  margin: 0.5rem 0;
+  width: 100%; /* Take full width of the overlay */
   background-color: var(--dark-border);
 }
 
@@ -78,6 +105,13 @@
   height: 100%;
   border-radius: 5px;
   background-color: var(--accent);
+}
+
+.timestampCentered {
+  color: white;
+  font-size: 0.75rem;
+  margin-top: 0.25rem;
+  text-align: center;
 }
 
 .details {
@@ -101,6 +135,12 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.removeBtn:hover {
+  background-color: rgba(255, 0, 0, 0.8); /* Red background on hover */
+  transform: scale(1.1); /* Slightly enlarge on hover */
 }
 
 .showType {
@@ -115,6 +155,44 @@
   z-index: 10;
 }
 
+.episodeNumberOverlay {
+  position: absolute;
+  bottom: 2.25rem;
+  left: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  z-index: 10;
+}
+
+.episodeCountOverlay {
+  position: absolute;
+  bottom: 2.25rem;
+  right: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem; /* Space between sub/dub items */
+  z-index: 10;
+}
+
+.normalCardEpisodeCount {
+  bottom: 0.5rem;
+}
+
+.episodeCountItem {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 0.2rem 0.5rem;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem; /* Space between icon and text */
+}
 /* Mobile List View */
 @media (max-width: 768px) {
   .card {
@@ -126,7 +204,7 @@
 
   .posterContainer {
     flex: 0 0 80px; /* Do not grow, do not shrink, base width of 80px */
-    height: 120px; /* Fixed height */
+    height: 150px; /* Fixed height */
   }
 
   .posterImg {
