--- a/src/components/common/ToggleSwitch.module.css
+++ b/src/components/common/ToggleSwitch.module.css
@@ -19,8 +19,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #555; /* Lighter grey for off state */
-    border: 1px solid #777; /* More distinct border for off state */
+    background-color: #555;
+    border: 1px solid #777;
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 26px;
