more optimizations for faster loading

--- a/src/components/common/StatusModal.module.css
+++ b/src/components/common/StatusModal.module.css
@@ -12,7 +12,7 @@
 }
 
 .modalContent {
-  background-color: var(--card-background);
+  background-color: #211f1f;
   padding: 2rem;
   border-radius: var(--card-border-radius);
   text-align: center;
