--- a/src/pages/Player.module.css
+++ b/src/pages/Player.module.css
@@ -382,7 +382,7 @@ body.light .watchlistBtn {
 .volumeSlider::-webkit-slider-runnable-track {
     width: 100%;
     height: 6px;
-    background: linear-gradient(to right, var(--accent) var(--track-fill-percent, 0%), #ccc var(--track-fill-percent, 0%));
+    background: linear-gradient(to right, var(--accent) var(--volume-percent, 0%), #ccc var(--volume-percent, 0%));
     border-radius: 3px;
 }
 
@@ -401,7 +401,7 @@ body.light .watchlistBtn {
 .volumeSlider::-moz-range-track {
     width: 100%;
     height: 6px;
-    background: linear-gradient(to right, var(--accent) var(--track-fill-percent, 0%), #ccc var(--track-fill-percent, 0%));
+    background: linear-gradient(to right, var(--accent) var(--volume-percent, 0%), #ccc var(--volume-percent, 0%));
     border-radius: 3px;
 }
 
@@ -414,13 +414,7 @@ body.light .watchlistBtn {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
-.volumeSlider:not(:active)::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, var(--accent) calc(var(--volume-percent) * 100%), #ccc calc(var(--volume-percent) * 100%));
-}
 
-.volumeSlider:not(:active)::-moz-range-track {
-    background: linear-gradient(to right, var(--accent) calc(var(--volume-percent) * 100%), #ccc calc(var(--volume-percent) * 100%));
-}
 
 .rightControls {
     display: flex;
@@ -826,7 +820,7 @@ body.light .epJumpInputGroup input {
 .ccSliderContainer input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 6px;
-    background: linear-gradient(to right, var(--accent) var(--track-fill-percent, 0%), #ccc var(--track-fill-percent, 0%));
+    background: linear-gradient(to right, var(--accent) var(--slider-percent, 0%), #ccc var(--slider-percent, 0%));
     border-radius: 3px;
 }
 
@@ -845,7 +839,7 @@ body.light .epJumpInputGroup input {
 .ccSliderContainer input[type="range"]::-moz-range-track {
     width: 100%;
     height: 6px;
-    background: linear-gradient(to right, var(--accent) var(--track-fill-percent, 0%), #ccc var(--track-fill-percent, 0%));
+    background: linear-gradient(to right, var(--accent) var(--slider-percent, 0%), #ccc var(--slider-percent, 0%));
     border-radius: 3px;
 }
 
@@ -858,13 +852,7 @@ body.light .epJumpInputGroup input {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
-.ccSliderContainer input[type="range"]:not(:active)::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, var(--accent) calc(var(--slider-percent) * 100%), #ccc calc(var(--slider-percent) * 100%));
-}
 
-.ccSliderContainer input[type="range"]:not(:active)::-moz-range-track {
-    background: linear-gradient(to right, var(--accent) calc(var(--slider-percent) * 100%), #ccc calc(var(--slider-percent) * 100%));
-}
 
 .ccSliderContainer span {
     font-size: 0.8rem;
