--- a/src/pages/Player.module.css
+++ b/src/pages/Player.module.css
@@ -1189,3 +1189,25 @@ body.light .websiteLink {
 body.light .sourceLoader {
     background-color: var(--light-bg-secondary);
 }
+
+.bufferingOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 15;
+}
+
+.bufferingSpinner {
+    width: 60px;
+    height: 60px;
+    border: 6px solid rgba(255, 255, 255, 0.3);
+    border-top-color: #fff;
+    border-radius: 50%;
+    animation: rotation 1s linear infinite;
+}
