--- a/src/components/anime/AnimeCard.module.css
+++ b/src/components/anime/AnimeCard.module.css
@@ -61,7 +61,7 @@
 
 .progressOverlay {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
