--- a/src/components/anime/AnimeCard.module.css
+++ b/src/components/anime/AnimeCard.module.css
@@ -73,19 +73,13 @@
   color: var(--accent);
 }
 
-.progressOverlay {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
+.progressContainer {
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 0.1rem;
   box-sizing: border-box;
-  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transform: translateZ(0);
+  margin-bottom: 0.5rem;
 }
 
 .progressBar {
@@ -288,11 +282,6 @@
     gap: 0.5rem;
   }
 
-  .progressInline {
-    width: 100%;
-    margin-top: auto;
-  }
-
   .removeBtnInline {
     position: absolute;
     top: 0.5rem;
@@ -315,7 +304,6 @@
 
   .episodeNumberOverlay,
   .episodeCountOverlay,
-  .progressOverlay,
   .showType,
   .removeBtn {
     display: none !important;
